--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -15,7 +15,7 @@
     list-style: none;
     cursor: pointer;
     background-color: #eee;
-    transition: 500ms;
+    transition: background-color 500ms, transform 500ms;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     display: inherit;
@@ -26,5 +26,24 @@
       transform: translate(0, -20px);
       background-color: pink;
     }
+  }
+}
+
+
+@for $day-number from 1 through 31 {
+  .calendar__day:nth-child(#{$day-number})::before {
+    content: "#{1*$day-number}";
+  }
+}
+
+@for $length from 28 through 31 {
+  .calendar--month-length--#{$length} :nth-child(n + #{$length + 1}) {
+    display: none;
+  }
+}
+
+@each $day, $indent in $week {
+  .calendar--start-day--#{$day} :first-child {
+    margin-left: $indent;
   }
 }
