--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,10 +3,10 @@ $cell-gap: 1px;
 $calendar-padding: 10px;
 
 $week:
-  mon 0,
-  tue calc(#{$cell-size} + #{$cell-gap}),
-  wed calc((#{$cell-size} + #{$cell-gap}) * 2),
-  thu calc((#{$cell-size} + #{$cell-gap}) * 3),
-  fri calc((#{$cell-size} + #{$cell-gap}) * 4),
-  sat calc((#{$cell-size} + #{$cell-gap}) * 5),
-  sun calc((#{$cell-size} + #{$cell-gap}) * 6);
+  "mon" 0,
+  "tue" $cell-size + $cell-gap,
+  "wed" ($cell-size + $cell-gap) * 2,
+  "thu" ($cell-size + $cell-gap) * 3,
+  "fri" ($cell-size + $cell-gap) * 4,
+  "sat" ($cell-size + $cell-gap) * 5,
+  "sun" ($cell-size + $cell-gap) * 6;
