--- a/src/styles/blocks/utils/variablas.scss
+++ b/src/styles/blocks/utils/variablas.scss
@@ -2,4 +2,4 @@ $sell-size: 100px;
 $number-size: 30px;
 $shift: ($sell-size - $number-size) / 2;
 $gap: 1px;
-$columns: ($sell-size + $gap) * 7 + 20px;
+$columns-size: ($sell-size + $gap) * 7 + 20px;
