--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,53 @@
+@import "./variables.scss";
+@import "./mixin.scss";
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $cell-gap;
+  width: $calendar-width;
+  padding: $calendar-padding;
+
+  &__cell {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: $calendar-cell-height;
+    width: $calendar-cell-width;
+    border: $cell-border;
+    box-sizing: border-box;
+    background-color: $cell-bg-color;
+    color: $cell-text-color;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: $cell-font-size;
+
+    @include hover(transform, translateY(-20px));
+
+    @for $cell from 1 through 31 {
+      &:nth-child(#{$cell})::before {
+        content: "#{$cell}";
+      }
+    }
+  }
+
+  @each $day, $i in $days {
+    &--start--day--#{$day} :first-child {
+      margin-left: ($i - 1) * ($calendar-cell-width + $cell-gap);
+    }
+  }
+
+  @for $cell from 28 through 31 {
+    &--month--length--#{$cell} :nth-child(n + #{$cell + 1}) {
+      display: none;
+    }
+  }
+
 }
