--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,60 @@
+$--day-block-width: 100px;
+$--day-block-height: 100px;
+$days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
+
 body {
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  gap: 1px;
+  flex-wrap: wrap;
+
+  max-width: #{$--day-block-height * 7 + 20};
+  padding: 30px;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: $--day-block-width;
+    height: $--day-block-width;
+    box-sizing: border-box;
+    border: 1px solid black;
+
+    background-color: #eee;
+
+    transition: all 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+
+      transition: all 0.5s;
+      transform: translateY(-20px);
+    }
+  }
+
+  @for $i from 1 through 31 {
+    & :nth-child(#{$i})::before {
+      content: "#{$i}";
+      color: black;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+    }
+  }
+
+  @each $day, $i in $days {
+    &--start-day--#{$day} :first-child {
+      margin-left: ($--day-block-width+1)*$i;
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length--#{$length} :nth-child(n+#{$length+1}) {
+      visibility: hidden;
+    }
+  }
 }
