task solution corrected

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,7 +17,7 @@ $day-name: (
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: $cell-size*7;
+  width: ($cell-size+$gap)*7;
   box-sizing: border-box;
   gap: $gap;
 
