--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,62 @@
-body {
-  margin: 0;
+$cell-size: 100px;
+$column-gap: 1px;
+$container-padding: 10px;
+
+$days-of-week: (
+  mon: 1,
+  tue: 2,
+  wed: 3,
+  thu: 4,
+  fri: 5,
+  sat: 6,
+  sun: 7,
+);
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $column-gap;
+  width: ($cell-size + $column-gap) * 7 + ($container-padding * 2);
+  padding: $container-padding;
+  box-sizing: border-box;
+
+  &__day {
+    position: relative;
+    text-align: center;
+    width: $cell-size;
+    height: $cell-size;
+    line-height: $cell-size;
+    border: 1px solid black;
+    background-color: #eee;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+    cursor: pointer;
+    transition: background-color, transform 0.5s;
+    box-sizing: border-box;
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+  }
+
+  @for $day from 1 through 31 {
+    &__day:nth-child(#{$day})::before {
+      content: "#{$day}";
+    }
+  }
+
+  @each $day, $index in $days-of-week {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: calc(
+        (#{$index} - 1) * (#{$cell-size} + #{$column-gap})
+      );
+    }
+  }
+
+  @for $day from 28 through 31 {
+    &--month-length-#{$day} &__day:nth-child(n + #{$day + 1}) {
+      display: none;
+    }
+  }
 }
