--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,60 +1,5 @@
-body {
-  margin: 0;
-}
+@import "./utils/mixins";
 
-$cell-size: 100px;
-$border-width: 1px;
-$font-size: 30px;
-$calendarPadding: 10px;
-$callGap: 1px;
-$days: (mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6, sun: 7);
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  gap: $callGap;
-  width: ($cell-size + 1) * 7;
-  margin-top: 30px;
-  padding: $calendarPadding;
-
-  &__day {
-    box-sizing: border-box;
-    position: relative;
-    width: $cell-size;
-    height: $cell-size;
-    border: $border-width solid black;
-    background-color: #eee;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: $font-size;
-
-    cursor: pointer;
-    transition: background-color 0.5s, transform 0.5s;
-
-    @for $i from 1 through 31 {
-      &:nth-child(#{$i})::before {
-        content: "#{$i}";
-      }
-    }
-
-    &:hover {
-      background-color: pink;
-      transform: translateY(-20px);
-    }
-  }
-
-  @each $day, $i in $days {
-    &--start-day-#{$day} &__day:first-child {
-      margin-left: calc( #{$callGap} * 2 + (#{$i} - 1) * #{$cell-size});
-    }
-  }
-
-  @for $day from 28 through 31 {
-    &--month-length-#{$day} &__day:nth-child(n + #{$day + 1}) {
-      display: none;
-    }
-  }
-}
+@import "variables";
+@import "blocks/page";
+@import "blocks/calendar";
