--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,12 @@
+@import "./utils/variables";
+@import "./block/calendar";
+
 body {
+  display: flex;
   margin: 0;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
