--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,45 @@
+$calendar-block-square: 100px;
+$calendar-block-color: #eee;
+
 body {
   margin: 0;
+  padding: 0;
+  font-family: "Arial", sans-serif;
+  font-size: 30px;
+}
+
+.calendar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+
+  &__block {
+    display: flex;
+    justify-content: flex-end;
+    width: 750px;
+    height: 101px;
+  }
+}
+
+.block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: $calendar-block-square;
+  height: $calendar-block-square;
+  background-color: $calendar-block-color;
+  border: 1px solid black;
+  transition: transform 0.5s ease;
+
+  &:hover {
+    transform: translateY(-20px);
+  }
+}
+
+@for $i from 1 through 29 {
+  .block--#{$i}::before {
+    content: "#{$i}";
+  }
 }
