--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
+@import "./utils/variables.scss";
+@import "./modifiers/modifiers.scss";
+@import "./blocks/calendar.scss";
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
