add task solution

--- a/src/styles/modifiers/modifiers.scss
+++ b/src/styles/modifiers/modifiers.scss
@@ -1,3 +1,9 @@
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(#{$i})::after {
+    content: "#{$i}";
+  }
+}
+
 @for $i from 28 through 31 {
   &.calendar--month-length-#{$i} {
     .calendar__day:nth-child(n + #{$i + 1}) {
