--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,9 +50,9 @@ body {
     }
   }
 
-  @for $month-lenght from 28 through 31 {
-    &--month-length--#{$month-lenght}
-    > &__day:nth-child(n + #{$month-lenght + 1}) {
+  @for $value from 28 through 31 {
+    &--month-length--#{$value}
+    > &__day:nth-child(n + #{$value + 1}) {
       display: none;
     }
   }
