--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -2,3 +2,5 @@ $cell-width: 100px;
 $gap: 1px;
 $padding: 10px;
 $calendar-width: ($cell-width * 7) + $gap * 6 + $padding * 2;
+$week: ("mon": 1, "tue": 2, "wed": 3, "thu": 4, "fri": 5, "sat": 6, "sun": 7);
+$daysOptions: 28, 29, 30, 31;
