--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,69 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin-left: 50vh;
-  margin-top: 100px;
-}
-
-$cell-size: 100px;
-$gap: 1px;
-$day-name: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-
-  gap: $gap;
-  width: ($cell-size + $gap) * 7;
-
-  &__day::before {
-    display: block;
-  }
-
-  &__day {
-    background-color: #eee;
-    width: $cell-size;
-    height: $cell-size;
-    border: 1px solid black;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    transition: background-color, transform 0.5s;
-
-    &:hover {
-      background-color: pink;
-      transform: translateY(-20px);
-    }
-  }
-
-  @for $day from 1 to 31 {
-    &__day:nth-child(#{$day})::before {
-      content: "#{$day}";
-    }
-  }
-
-  @each $day, $index in $day-name {
-    &--start-day--#{$day} :first-child {
-      margin-left: $index * ($cell-size + $gap);
-    }
-  }
-
-  @for $month-length from 28 to 31 {
-    &--month-length--#{$month-length} >:not(:nth-child(-n + #{$month-length})) {
-      visibility: hidden;
-    }
-  }
-}
+@import "./utils/variables.scss";
+@import "./blocks/calendar.scss";
+@import "./blocks/global.scss";
