--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,73 +1,69 @@
+$square-size: 100px;
+$gap: 1px;
+$calendar-padding: 10px;
+$columns: 7;
+$width-calendar: $square-size * ($columns + 1) +
+  $gap * 6 + $calendar-padding * 2;
+$start-day:
+  (
+    mon: 1,
+    tue: 2,
+    wed: 3,
+    thu: 4,
+    fri: 5,
+    sat: 6,
+    sun: 7
+  );
+
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
 }
 
-$cell-size: 100px;
-$day-margin: 0.5px;
-$container-columns: 7;
-$column-gap: 1px;
-$container-padding: 10px;
-$container-width: ($cell-size * $container-columns) + $column-gap *
-  $container-columns + ($container-padding * 2);
-
-$days-of-week: (
-  mon: 1,
-  tue: 2,
-  wed: 3,
-  thu: 4,
-  fri: 5,
-  sat: 6,
-  sun: 7,
-);
-
 .calendar {
+  width: $width-calendar;
   display: flex;
-  flex-wrap: wrap;
-  width: $container-width;
-  padding: $container-padding;
   box-sizing: border-box;
-  margin-top: 15px;
+  flex-wrap: wrap;
+  gap: $gap;
+  padding: $calendar-padding;
 
   &__day {
-    position: relative;
-    width: $cell-size;
-    margin: $day-margin;
+    height: $square-size;
+    width: $square-size;
     border: 1px solid black;
     background-color: #eee;
-    font-family: Arial, sans-serif;
-    font-size: 30px;
-    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: background-color, transform 0.5s;
-    box-sizing: border-box;
-
+    cursor: pointer;
     &:hover {
-      background-color: pink;
       transform: translateY(-20px);
+      background-color: pink;
     }
 
-    &::before {
-      display: block;
-      text-align: center;
-      line-height: calc(#{$cell-size} - 2px);
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day}) {
+        &::before {
+          content: "#{$day}";
+        }
+      }
+    }
+  }
+  @each $index, $margin in $start-day {
+    &--name-of-the-day-#{$margin} :first-child {
+      margin-left: calc(($index - 1)
+      * ($square-size + $gap));
     }
   }
 
-  @for $day from 1 through 31 {
-    &__day:nth-child(#{$day})::before {
-      content: "#{$day}";
-    }
-  }
-
-  @each $day, $index in $days-of-week {
-    &--start-day-#{$day} &__day:first-child {
-      margin-left: calc(
-        #{$day-margin} + (#{$index} - 1) * (#{$cell-size} + #{$column-gap})
-      );
-    }
-  }
-
-  @for $day from 28 through 31 {
-    &--month-length-#{$day} &__day:nth-child(n + #{$day + 1}) {
+  @for $lastdays from 28 through 31 {
+    &--#{$lastdays}>:nth-child(n + #{$lastdays + 1}) {
       display: none;
     }
   }
