--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,70 +1,4 @@
-$square-size: 100px;
-$gap: 1px;
-$calendar-padding: 10px;
-$columns: 7;
-$width-calendar: $square-size * ($columns + 1) +
-  $gap * 6 + $calendar-padding * 2;
-$start-day:
-  (
-    mon: 1,
-    tue: 2,
-    wed: 3,
-    thu: 4,
-    fri: 5,
-    sat: 6,
-    sun: 7
-  );
-
-:root {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-body {
-  margin: 0;
-}
-
-.calendar {
-  width: $width-calendar;
-  display: flex;
-  box-sizing: border-box;
-  flex-wrap: wrap;
-  gap: $gap;
-  padding: $calendar-padding;
-
-  &__day {
-    height: $square-size;
-    width: $square-size;
-    border: 1px solid black;
-    background-color: #eee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color, transform 0.5s;
-    cursor: pointer;
-    &:hover {
-      transform: translateY(-20px);
-      background-color: pink;
-    }
-
-    @for $day from 1 through 31 {
-      &:nth-child(#{$day}) {
-        &::before {
-          content: "#{$day}";
-        }
-      }
-    }
-  }
-  @each $index, $margin in $start-day {
-    &--name-of-the-day-#{$margin} :first-child {
-      margin-left: calc(($index - 1)
-      * ($square-size + $gap));
-    }
-  }
-
-  @for $lastdays from 28 through 31 {
-    &--#{$lastdays}>:nth-child(n + #{$lastdays + 1}) {
-      display: none;
-    }
-  }
-}
+@import "./utils/variables.scss";
+@import "./utils/root_and_body.scss";
+@import "../styles/calendar/calendar.scss";
+@import "./loops/loops.scss";
