--- a/src/styles/blocks/global.scss
+++ b/src/styles/blocks/global.scss
@@ -7,4 +7,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
