add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -18,8 +18,8 @@
   font-size: #{$font-size};
   position: relative;
   cursor: pointer;
-  transition: background-color #{$animation-duration}, margin-left #{$animation-duration};
-
+  transition: background-color #{$animation-duration},
+    margin-left #{$animation-duration};
 
   &::before {
     content: attr(data-day);
