add task solution

--- a/src/styles/blocks/utils/variablas.scss
+++ b/src/styles/blocks/utils/variablas.scss
@@ -1,5 +1,15 @@
-$sell-size: 100px;
+$cell-size: 100px;
 $number-size: 30px;
-$shift: ($sell-size - $number-size) / 2;
+$shift: ($cell-size - $number-size) / 2;
 $gap: 1px;
-$columns-size: ($sell-size + $gap) * 7 + 20px;
+$columns-size: ($cell-size + $gap) * 7 + 20px;
+$weekdays: (
+  "mon" 0,
+  "tue" 1,
+  "wed" 2,
+  "thu" 3,
+  "fri" 4,
+  "sat" 5,
+  "sun" 6
+);
+
