--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -7,15 +7,14 @@
   gap: $gap;
 
   &__day {
-    position: relative;
-    height: $sell-size;
-    width: $sell-size;
+    height: $cell-size;
+    width: $cell-size;
     background-color: #eee;
     border: 1px solid #333;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
     font-size: $number-size;
-    transition-duration: 0.5s;
+    transition: background-color, transform 0.5s;
 
     &:hover {
       cursor: pointer;
@@ -23,37 +22,30 @@
       transform: translateY(-20px);
     }
 
+    &::before {
+      display: block;
+      text-align: center;
+      line-height: $cell-size;
+    }
+
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
-        position: absolute;
-        top: $shift;
-        right: $shift;
       }
     }
   }
 
-  $weekdays: (
-    "mon" 0,
-    "tue" 1,
-    "wed" 2,
-    "thu" 3,
-    "fri" 4,
-    "sat" 5,
-    "sun" 6
-  );
-
   @each $weekday, $position in $weekdays {
     &--start-day--#{$weekday} {
       & :first-child {
-        margin-left: ($sell-size + $gap) * $position;
+        margin-left: ($cell-size + $gap) * $position;
       }
     }
   }
 
   @for $i from 28 through 31 {
     &--month-length--#{$i} {
-      & :nth-child(n + #{$i - 1}) {
+      &:nth-child(n + #{$i + 1}) {
         display: none;
       }
     }
