--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -6,8 +6,8 @@
   width: $calendar-width;
 
   @each $dayName, $weekDay in $week-day {
-    &--start-#{$dayName} &__day:first-child {
-      margin-left: $weekDay * $cell-size + $gap-width * $weekDay;
+    &--start--#{$dayName} &__day:first-child {
+      margin-left: $weekDay*$cell-size+$gap-width*$weekDay;
     }
   }
 
@@ -18,25 +18,25 @@
   }
 
   &__day {
-    box-sizing: border-box;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #000;
-    background-color: #eee;
+    box-sizing: border-box;
     width: $cell-size;
     height: $cell-size;
-    transition: all 0,5s;
+    border: 1px solid #000;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee;
+    transition: all 0.5s;
 
     &:hover {
       cursor: pointer;
       background-color:#febfcb;
-      transform: translate(0, 20px);
+      transform: translate(0, -20px);
     }
   }
 
   @for $i from 28 through 31 {
-    &--month-length-#{$i} {
+    &--month-length--#{$i} {
       & :nth-child(n + #{$i + 1}) {
         display: none;
       }
