add layout calendar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,63 @@
-body {
-  margin: 0;
+@import "utils/variables";
+@import "utils/reset";
+
+$cell-size: 100px;
+$cell-gap: 1px;
+$cell-width: 7 * ($cell-size + $cell-gap);
+
+$days-week:
+  mon 1,
+  tue 2,
+  wed 3,
+  thu 4,
+  fri 5,
+  sat 6,
+  sun 7;
+
+$month-length: 28, 29, 30, 31;
+
+.wrapper {
+  width: $cell-width;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $cell-gap;
+
+  @each $day-week, $n in $days-week {
+    &--start-day--#{$day-week} :first-child {
+      margin-left: ($n - 1) * ($cell-size + $cell-gap);
+    }
+  }
+
+  &--month-length {
+    @each $count in $month-length {
+      @for $day from 1 through $count {
+        &--#{$count} > :nth-child(#{$day})::before {
+          content: "#{$day}";
+        }
+      }
+    }
+  }
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: 1px dashed black;
+    cursor: pointer;
+    transition-duration: 0.5s, 0.5s;
+    transition-property: transform, background-color;
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+  }
 }
