--- a/src/styles/utils/reset.scss
+++ b/src/styles/utils/reset.scss
@@ -2,6 +2,14 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+}
+
 body {
   margin: 0;
   padding: 0;
