--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,11 +1,17 @@
 $clr--white: #FFF;
 $clr--main: #060B35;
 
+$cell-size: 100px;
+$cell-gap: 1px;
+$cell-width: 7 * ($cell-size + $cell-gap);
 
-html {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 14px;
-}
+$days-week:
+  mon 1,
+  tue 2,
+  wed 3,
+  thu 4,
+  fri 5,
+  sat 6,
+  sun 7;
+
+$month-length: 28, 29, 30, 31;
