--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,74 +1,62 @@
-body {
-  margin: 0;
+@import "./variables.scss";
+
+* {
+  box-sizing: border-box;
 }
 
-$cell-size: 100px;
-$day-margin: 0.5px;
-$container-columns: 7;
-$column-gap: 1px;
-$container-padding: 10px;
-$container-width: ($cell-size * $container-columns) + $column-gap *
-  $container-columns + ($container-padding * 2);
-
-$days-of-week: (
-  mon: 1,
-  tue: 2,
-  wed: 3,
-  thu: 4,
-  fri: 5,
-  sat: 6,
-  sun: 7,
-);
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
 
 .calendar {
+  height: 100vh;
+  padding: $padding;
+  margin: 0 auto;
+  width: $calendar-width;
+  list-style: none;
+
   display: flex;
+  align-items: center;
+  align-content: center;
+  gap: $gap-between-boxes;
   flex-wrap: wrap;
-  width: $container-width;
-  padding: $container-padding;
-  box-sizing: border-box;
-  margin-top: 15px;
 
   &__day {
-    position: relative;
-    width: $cell-size;
-    margin: $day-margin;
-    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     background-color: #eee;
-    font-family: Arial, sans-serif;
-    font-size: 30px;
+    width: $day-box-size;
+    height: $day-box-size;
+    border: 1px solid;
+
     cursor: pointer;
-    transition: background-color, transform 0.5s;
-    box-sizing: border-box;
+    transition: all 0.5s;
 
     &:hover {
-      background-color: pink;
       transform: translateY(-20px);
+      background-color: pink;
     }
 
-    &::before {
-      display: block;
-      text-align: center;
-      line-height: calc(#{$cell-size} - 2px);
-    }
-  }
-
-  @for $day from 1 through 31 {
-    &__day:nth-child(#{$day})::before {
-      content: "#{$day}";
+    @for $numberOfDay from 1 through 31 {
+      &:nth-child(#{$numberOfDay})::before {
+        content: "#{$numberOfDay}";
+      }
     }
   }
 
-  @each $day, $index in $days-of-week {
-    &--start-day-#{$day} &__day:first-child {
-      margin-left: calc(
-        #{$day-margin} + (#{$index} - 1) * (#{$cell-size} + #{$column-gap})
-      );
-    }
-  }
-
-  @for $day from 28 through 31 {
-    &--month-length-#{$day} &__day:nth-child(n + #{$day + 1}) {
+  @for $month-length from 28 through 31 {
+    &--month-length--#{$month-length} :nth-child(n + #{$month-length + 1}) {
       display: none;
+    }
+  }
+
+  @each $day, $num in $start-day {
+    &--start-day--#{$day} :first-child {
+      margin-left: ($day-box-size + $gap-between-boxes) * $num;
     }
   }
 }
