--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,6 @@
-$clr--white: #FFF;
-$clr--main: #060B35;
+$clr--bg: #eee;
+$clr--main: #000000;
+$clr--secondary: #ffc0cb;
 
 $cell-size: 100px;
 $cell-gap: 1px;
