fixed errors part3

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -18,10 +18,10 @@
           content: "#{$day}";
         }
       }
-      @for $num from $count+1 through 32 {
-        &--#{$count} > :nth-child(#{$num}) {
-          display: none;
-        }
+    }
+    @for $var from 28 through 31 {
+      &--#{$var} > :nth-child(n+#{$var + 1}) {
+        display: none;
       }
     }
   }
