fix calendar elements and working of month-length

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -18,17 +18,46 @@ body {
 
   flex-wrap: wrap;
 
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+
+    background-color: #eee;
+    height: $squareSize;
+    width: $squareSize;
+    box-sizing: border-box;
+    border: 1px solid black;
+
+    transition: transform 0.5s, background-color 0.5s;
+
+    cursor: pointer;
+
+    &:hover {
+      background-color: pink;
+      transform: translate(0, -20px);
+    }
+  }
+
   @each $weekDay, $numWeekDay in $daysOfTheWeek {
-    &--start-day--#{$weekDay} .day:first-child {
+    &--start-day--#{$weekDay} &__day:first-child {
       margin-left: ($squareSize + $gap) * ($numWeekDay - 1);
     }
   }
 
+  @for $numberOfDay from 1 through 31 {
+    &__day:nth-child(#{$numberOfDay})::before {
+      content: "#{$numberOfDay}";
+    }
+  }
+
   @each $amountOfDays in $possibleAmountsOfDays {
-    @for $numberOfDay from 1 through $amountOfDays {
-      &--month-length--#{$amountOfDays}
-      .day:nth-child(#{$numberOfDay})::before {
-        content: "#{$numberOfDay}";
+    &--month-length--#{$amountOfDays} &__day {
+      &:nth-child(n + #{$amountOfDays + 1}) {
+        display: none;
       }
     }
   }
