--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,50 @@
+@import "./utils/variables.scss";
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  padding: 20px;
+}
+
+.calendar {
+  width: $widthCell * 7 + 7px;
+
+  display: flex;
+  gap: 1px;
+  flex-wrap: wrap;
+
+  @each $day, $number in $start-day {
+    &--start-day--#{$day} :first-child {
+      margin-left: ($widthCell + 1px) * $number;
+    }
+  }
+
+  @for $index from 28 through 31 {
+    &--month-length--#{$index} :nth-child(n + #{$index + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+    height: 100px;
+    width: $widthCell;
+    text-align: center;
+    line-height: $widthCell;
+    background: #eee;
+    transition: transform 0.5s ease 0s;
+    border: 1px solid #000;
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: "#{$day}";
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background: pink;
+      transform: translateY(-20px);
+    }
+  }
 }
