--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,34 @@
+@import "utils/variables";
+@import "utils/day";
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  padding: 10px;
+  gap: 1px;
+  width: (($squeare-size*7)+6);
+
+  @each $day, $number in $week {
+    &--start-day--#{$day} :first-child {
+      margin-left: ($squeare-size+1) * $number;
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length--#{$length} {
+      .day:nth-child(n + #{$length +1}) {
+        display: none;
+      }
+    }
+  }
 }
