--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,10 @@
+@import "./utils/variables";
+@import "./utils/mixins";
+
+@import "./blocks/container";
+@import "./blocks/calendar";
+
 body {
   margin: 0;
+  font-family: Arial, Times New Roman, sans-serif;
 }
