--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -2,6 +2,5 @@ $daySize: 100px;
 $padding: 10px;
 $border: 1px;
 $gap: 1px;
-$daysInWeek: 7;
-$calendarWidth: $daysInWeek * ($daySize + $padding * 2 + $border * 2) + $gap * ($daysInWeek - 1);
-$weekday-names: mon, tue, wed, thu, fri, sat, sun;
+$calendarWidth: 7 * $daySize + $gap * 6;
+$dayNames: mon, tue, wed, thu, fri, sat, sun;
