--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,5 @@
 @import "utils/variables";
-@import "utils/day";
-
-html {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
+@import "utils/reset";
 
 body {
   margin: 0;
@@ -13,20 +8,48 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 10px;
   gap: 1px;
-  width: (($squeare-size*7)+6);
+  width: (($squeare-size * 7) + 6);
+
+  &__day {
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    width: $squeare-size ;
+    height: $squeare-size ;
+    border: 1px solid black;
+    background-color: #eee;
+
+    transition: all 0.5s;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: pink;
+      cursor: pointer;
+    }
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: "#{$day}";
+      }
+    }
+  }
 
   @each $day, $number in $week {
     &--start-day--#{$day} :first-child {
-      margin-left: ($squeare-size+1) * $number;
+      margin-left: ($squeare-size + 1) * $number;
     }
   }
 
   @for $length from 28 through 31 {
     &--month-length--#{$length} {
-      .day:nth-child(n + #{$length +1}) {
+      .calendar__day:nth-child(n + #{$length +1 }) {
         display: none;
       }
     }
