add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -19,57 +19,12 @@
   position: relative;
   cursor: pointer;
   transition: background-color #{$animation-duration},
-    margin-left #{$animation-duration};
-
-  &::before {
-    content: attr(data-day);
-  }
+    margin-left #{$animation-duration},
+    transform;
 
   &:hover {
     background-color: pink;
     cursor: pointer;
     transform: translateY(-#{$hover-translate});
-  }
-
-  &.calendar--start-mon {
-    &:nth-child(1) {
-      margin-left: 0;
-    }
-  }
-
-  &.calendar--start-tue {
-    &:nth-child(2) {
-      margin-left: 0;
-    }
-  }
-
-  &.calendar--start-wed {
-    &:nth-child(3) {
-      margin-left: 0;
-    }
-  }
-
-  &.calendar--start-thu {
-    &:nth-child(4) {
-      margin-left: 0;
-    }
-  }
-
-  &.calendar--start-fri {
-    &:nth-child(5) {
-      margin-left: 0;
-    }
-  }
-
-  &.calendar--start-sat {
-    &:nth-child(6) {
-      margin-left: 0;
-    }
-  }
-
-  &.calendar--start-sun {
-    &:nth-child(7) {
-      margin-left: 0;
-    }
   }
 }
