--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,16 +2,16 @@
 @import "utils/reset";
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+  height: 100vh;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   padding: 10px;
   gap: 1px;
   width: (($squeare-size * 7) + 6);
