add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -19,8 +19,8 @@
   position: relative;
   cursor: pointer;
   transition: background-color #{$animation-duration},
-    margin-left #{$animation-duration},
-    transform;
+  margin-left #{$animation-duration},
+  transform #{$animation-duration};
 
   &:hover {
     background-color: pink;
