--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,53 +1,3 @@
-$cell-size: 100px;
-$cell-border: 1px solid #000;
-$cell-font-size: 30px;
-$cell-gap: 1px;
-$calendar-padding: 10px;
+@import "./utiles/variables.scss";
 
-$weekdays: mon, tue, wed, thu, fri, sat, sun;
-$month-lengths: 28, 29, 30, 31;
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  gap: $cell-gap;
-  width: calc(7 * #{$cell-size} + 6 * #{$cell-gap} + 2 * #{$calendar-padding});
-  padding: $calendar-padding;
-  margin: auto;
-
-  @each $day in $weekdays {
-    &--start-#{$day} .calendar__cell:first-child {
-      margin-left: (index($weekdays, $day) - 1) * (#{$cell-size} + #{$cell-gap});
-    }
-  }
-
-  @each $length in $month-lengths {
-    &--month-length-#{$length} .calendar__cell:nth-child(n + #{$length + 1}) {
-      display: none;
-    }
-  }
-
-  .calendar__cell {
-    width: $cell-size;
-    height: $cell-size;
-    border: $cell-border;
-    background-color: #eee;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Arial, sans-serif;
-    font-size: $cell-font-size;
-    position: relative;
-    cursor: pointer;
-    transition: transform 0.5s, background-color 0.5s;
-
-    &::before {
-      content: attr(data-day);
-    }
-
-    &:hover {
-      background-color: pink;
-      transform: translateY(-20px);
-    }
-  }
-}
+@import "./blocks/calendar.scss";
