--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,9 @@
-$height-cell: 100px;
-$width-cell: 100px;
-$month-length: 28, 29, 30, 31;
+$size-cell: 100px;
 $week:
-  "mon" 0
-  "tue" 1
-  "wen" 3
-  "thu" 4
-  "fri" 5
-  "sat" 6
-  "sun" 7;
+  "mon" 0,
+  "tue" 1,
+  "wen" 2,
+  "thu" 3,
+  "fri" 4,
+  "sat" 5,
+  "sun" 6;
