--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,56 @@
 body {
   margin: 0;
 }
+
+.calendar {
+  width:710px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  margin: 10px;
+  box-sizing: border-box;
+
+  &__cell {
+    height: 100px;
+    width: 100px;
+    background-color:#eee;
+    border: 1px solid black;
+    box-sizing: border-box;
+    transition: 0.5s;
+    position: relative;
+
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: pink;
+      cursor: pointer;
+    }
+  }
+
+  @for $i from 1 through 31 {
+    &__cell:nth-child(#{$i})::before {
+      content: "#{$i}";
+      font-size: 30px;
+      font-family: Arial, Helvetica, sans-serif;
+      position: absolute;
+      transform: translate(-50%, -50%);
+      top: 50%;
+      left: 50%;
+    }
+  }
+
+@for $i from 28 through 31 {
+  &_month-length-#{$i} >:nth-child(n + #{$i +1}){
+      display: none;
+    }
+  }
+
+$days: 'mon' 0,'tue'1,'wed'2,'thu'3,'fri'4,'sat'5,'sund'6;
+
+@each $name, $index in $days {
+  &_start-day-#{$name}>:first-child {
+    margin-left: $index * (100px + 1);
+  }
+}
+}
+
