--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,7 +9,7 @@ $calendar-width: $calendar-cell-height * 7 + $calendar-padding * 2 + $cell-gap *
 $cell-border: 1px solid #000;
 $cell-bg-color: #eee;
 $cell-text-color: #000;
-$cell-font-family: Arial, sans-serif;
+$cell-font-family: arial, sans-serif;
 $cell-font-size: 30px;
 
 $cell-hover-bg: pink;
