--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,8 +1,8 @@
 $blockColor: #eee;
 $hoverColor: pink;
-$maxWidth: 706px;
-$blockHeight: 100px;
-$blockWidth: 100px;
+$itemSize: 101px;
+$maxWidth: calc(7 * 101px); // can't put $itemSize hier  - it doesn't work;
+$blockSeize: 100px;
 
 $days: (
   "mon": 0,
