--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,3 +3,12 @@ $border-width: 1px;
 $font-size: 30px;
 $animation-duration: 0.5s;
 $hover-translate: 20px;
+$day-map: (
+  mon: 1,
+  tue: 2,
+  wed: 3,
+  thu: 4,
+  fri: 5,
+  sat: 6,
+  sun: 7
+);
