--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,8 +1,7 @@
 .calendar {
-  width: $cell-width;
-  margin: 100px auto;
-
   &__field {
+    width: $cell-width;
+    margin: 100px auto;
     display: flex;
     flex-wrap: wrap;
     gap: $cell-gap;
@@ -40,7 +39,7 @@
     background-color: $color-cell;
     cursor: pointer;
 
-    transition: color 0.5s, transform 0.5s;
+    transition: $transition-cell;
 
     &:hover {
       transform: translateY(-20px);
