--- a/src/styles/blocks/utils/variables.scss
+++ b/src/styles/blocks/utils/variables.scss
@@ -2,6 +2,8 @@ $cell-size: 100px;
 $cell-gap: 1px;
 $cell-width: 7 * ($cell-size + $cell-gap);
 
+
+$transition-cell: color 0.5s, transform 0.5s;
 $color-cell: #eee;
 $color-cell-hover: pink;
 
