--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,54 +1,4 @@
-body {
-  margin: 0;
-}
+@import  './utiles/variables.scss';
+@import  'blocks/calendar.scss';
+@import  'blocks/page.scss';
 
-.calendar {
-  width: 710px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1px;
-  margin: 10px;
-  box-sizing: border-box;
-
-  &__cell {
-    height: 100px;
-    width: 100px;
-    background-color: #eee;
-    border: 1px solid black;
-    box-sizing: border-box;
-    transition: 0.5s;
-    position: relative;
-
-    &:hover {
-      transform: translateY(-20px);
-      background-color: pink;
-      cursor: pointer;
-    }
-  }
-
-  @for $i from 1 through 31 {
-    &__cell:nth-child(#{$i})::before {
-      content: "#{$i}";
-      font-size: 30px;
-      font-family: Arial, Helvetica, sans-serif;
-      position: absolute;
-      transform: translate(-50%, -50%);
-      top: 50%;
-      left: 50%;
-    }
-  }
-
-  @for $i from 28 through 31 {
-    &--month-length-#{$i} >:nth-child(n + #{$i +1}) {
-      display: none;
-    }
-  }
-
-  $days:"mon" 1,"tue" 2,"wed" 3,"thu" 4,"fri" 5,"sun" 6,"sat" 7;
-
-  @each $name, $index in $days {
-    &--start-day-#{$name}>:first-child {
-      margin-left: $index * (100px + 1);
-    }
-  }
-}
