--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,12 @@
 body {
   margin: 0;
 }
+
+@import "./calendar.scss";
+@import "./values.scss";
+
+.container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
