--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh
+  min-height: 100vh;
 }
 
 $grey: #eee;
@@ -28,7 +28,6 @@ $week-days:
   "fri" 6,
   "sat" 7;
 $month-length-modifiers: 28, 29, 30, 31;
-
 
 .calendar {
   display: flex;
@@ -71,7 +70,7 @@ $month-length-modifiers: 28, 29, 30, 31;
   }
 
   @each $day, $index in $week-days {
-    &--start--day--#{$day}.calendar__day:first-child  {
+    &--start--day--#{$day}.calendar__day:first-child {
       margin-left: ($element-size + $gap) * ($index - 1);
     }
   }
