--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,15 @@
+@import "./blocks/variables";
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
+
+.wrapper__calendar {
+  margin: 0 auto;
+}
+
+@import "./blocks/calendar";
