--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -22,7 +22,7 @@
     transition: transform 0.5s, background-color 0.5s;
 
     @for $day from 1 through 31 {
-      &--#{$day}::before {
+      &:nth-child(#{$day})::before {
         content: "#{$day}";
       }
     }
